--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support:design:24.2.1'
     compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'de.greenrobot:greendao:2.1.0'
+    compile 'org.greenrobot:greendao:3.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
 }
