--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'org.greenrobot:greendao:3.1.1'
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.github.alamkanak:android-week-view:1.2.6'
+    compile 'joda-time:joda-time:2.9.4'
 }
